--- a/main.css
+++ b/main.css
@@ -26,3 +26,61 @@ body {
 .navbar a:hover {
     background-color: #f6bd66;
 }
+
+#local {
+    position: relative;
+}
+
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+}
+
+
+
+.carousel-inner {
+    max-height:39rem !important;
+}
+
+.image-slider {
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.image-slider img {
+    max-width: 100%;
+    max-height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 1s ease;
+}
+
+.image-slider img.active {
+    opacity: 1;
+}
+
+
+#img-equipo{
+    max-height:30rem !important;
+    width:50%;
+}
+
+#local {
+    margin-top:50px;
+    background-color: #f3f3f3;
+    display:flex;
+    justify-content: center; 
+    padding-bottom: 300px; 
+}
