Commit 12: Estilos para el formulario y la seccion de contacto en main.css

--- a/main.css
+++ b/main.css
@@ -132,3 +132,17 @@ iframe {
     min-height:500px;
     position:relative;
 }
+
+#contenedor-formulario{
+    position:absolute;
+    top:30%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    background: #fbfafa;
+    border-radius:5px;
+    
+}
+
+#titulo-formulario {
+    color: #3f3f3f;
+}
