--- a/main.css
+++ b/main.css
@@ -146,3 +146,17 @@ iframe {
 #titulo-formulario {
     color: #3f3f3f;
 }
+
+footer {
+    background: #1b2a4e;
+    min-height: 100px;;
+}
+footer p{
+    color:#f3f3f3;
+    text-align:center;
+}
+#iconos  i {
+    font-size: 26px;
+    padding: 0 8px;
+    color:#f3f3f3;
+}
